welcome + login + register realization

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 gg.jte.development-mode=true
 spring.application.name=online-school
+rsa.private-key=classpath:certs/private.pem
+rsa.public-key=classpath:certs/public.pem
