--- a/application.properties
+++ b/application.properties
@@ -5,3 +5,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
+
+rsa.private-key=classpath:certs/private.pem
+rsa.public-key=classpath:certs/public.pem
+
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
