added course deleting, custom error page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ gg.jte.development-mode=true
 spring.application.name=online-school
 rsa.private-key=classpath:certs/private.pem
 rsa.public-key=classpath:certs/public.pem
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.whitelabel.enabled=false
+server.error.path=/error
+
